# SyncPlay

./: .gitignore  Cargo.toml  Config.toml  README.md
src/: main.rs  user_files.rs
src/euser_files/: mod.rs  storing_files.rs
src/spotify_data/auth/: mod.rs
src/user_config/: mod.rs
src/user_files/: mod.rs
src/user_files/path/: mod.rs
