[package]
name = "syncplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audiotags = "0.4.1"
kdam = "0.3.0"
serde = "1.0.164"
toml = "0.7.4"
config = "0.13.3"
tokio = {version = "1.28.2", features =["full"]}
log = "0.4.19"
env_logger = "0.10.0"
rspotify = { version = "0.13.2", default-features = false, features = ["cli", "client-reqwest", "reqwest-native-tls", "env-file"]}
dotenv = "0.15.0"
